--- a/JobAggregator/aggregator/templates/aggregator/response_vacation.html
+++ b/JobAggregator/aggregator/templates/aggregator/response_vacation.html
@@ -8,14 +8,16 @@
     <div class="response-container">
         {% for vacation in vacations %}
         <div class="vacancy-card">
+            <div class="response-header">{{ vacation.agregator }}</div>
+
         <div class="response-header">{{ vacation.name }}</div>
         <div class="response-company">{{ vacation.company }}</div>
-        <div class="response-salary">{{ vacation.salary.from }} - {{ vacations.salary.to }} руб</div>
-        <div class="response-address">{{ vacation.address.city }} {{ vacations.address.street }} {{ vacations.address.building }}</div>
+        <div class="response-salary">{{ vacation.salary }}</div>
+        <div class="response-address">{{ vacation.address }}</div>
         <div class="response-experience">{{ vacation.experience }}</div>
-        <div class="response-employment">{{ vacation.employment }}, {{ vacations.schedule }}</div>
+        <div class="response-employment">{{ vacation.employment }}, {{ vacation.schedule }}</div>
         <div class="response-published_at">{{ vacation.published_at }} </div>
-            <a class="response-url" href="https://hh.ru/vacancy/126211080">{{ vacations.url }}</a>
+            <a class="response-url" href="{{ vacation.url }}">{{ vacation.url }}</a>
         </div>
         {% endfor %}
     </div>
