--- a/JobAggregator/users/templates/users/registration.html
+++ b/JobAggregator/users/templates/users/registration.html
@@ -21,7 +21,7 @@
 
 
         {% endfor %}
-        <p><button class="btn-login" type="submit">Войти</button></p>
+        <p><button class="btn-login" type="submit">Зарегистрировать</button></p>
     </form>
     </div>
   </div>
