change settings Docker for test Deploy

--- a/JobAggregator/aggregator/templates/aggregator/favorite_vacantion.html
+++ b/JobAggregator/aggregator/templates/aggregator/favorite_vacantion.html
@@ -27,7 +27,7 @@
                 <div class="response-company mb-3">{{ vacation.company }}</div>
                 <div class="response-salary mb-3">{{ vacation.salary }}</div>
                 <div class="response-address mb-3">{{ vacation.address }}</div>
-                <div class="response-experience mb-3">{{ vacation.experience }}</div>
+                <div class="response-experience mb-3">{{ vacation.experience }}, {{ vacation.education }}</div>
                 <div class="response-employment mb-3">{{ vacation.employment }}, {{ vacation.schedule }}</div>
                 <div class="response-published_at mb-3">{{ vacation.published_at }}</div>
                 <a class="response-url" href="{{ vacation.url }}" target="_blank">{{ vacation.url }}</a>
